// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Node Listing Metric Cell should format N/A as the metric for an offline node 1`] = `
<div
  class="monTableCell__offline"
>
  N/A
</div>
`;

exports[`Node Listing Metric Cell should format a non-percentage metric 1`] = `
<div
  class="euiFlexGroup emotion-euiFlexGroup-responsive-l-spaceBetween-stretch-row"
>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  />
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-xs-flexStart-stretch-row"
      data-test-subj="testCell2"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <div
          class="euiPopover emotion-euiPopover"
        >
          <div
            class="euiPopover__anchor css-16vtueo-render"
          >
            <button
              aria-label="More information about this metric"
              class="euiButtonIcon euiButtonIcon--xSmall emotion-euiButtonIcon-empty-text-hoverStyles"
              data-test-subj="monitoringCellIcon-testCell2"
              title="More information about this metric"
              type="button"
            >
              <span
                aria-hidden="true"
                class="euiButtonIcon__icon"
                color="inherit"
                data-euiicon-type="sortDown"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <div
          class="euiText emotion-euiText-m"
        >
          206.3 GB
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Node Listing Metric Cell should format a percentage metric 1`] = `
<div
  class="euiFlexGroup emotion-euiFlexGroup-responsive-l-spaceBetween-stretch-row"
>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  />
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-xs-flexStart-stretch-row"
      data-test-subj="testCell"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <div
          class="euiPopover emotion-euiPopover"
        >
          <div
            class="euiPopover__anchor css-16vtueo-render"
          >
            <button
              aria-label="More information about this metric"
              class="euiButtonIcon euiButtonIcon--xSmall emotion-euiButtonIcon-empty-text-hoverStyles"
              data-test-subj="monitoringCellIcon-testCell"
              title="More information about this metric"
              type="button"
            >
              <span
                aria-hidden="true"
                class="euiButtonIcon__icon"
                color="inherit"
                data-euiicon-type="sortDown"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <div
          class="euiText emotion-euiText-m"
        >
          0%
        </div>
      </div>
    </div>
  </div>
</div>
`;
